# OTUS_CPP_6

./: CMakeLists.txt  bintray.json
src/: Matrix.h  main.cpp  otus.h
test/: CMakeLists.txt  OptionalTasks.cpp
